third_party/move/move-compiler-v2/tests/ability-checker/assign.exp

Diagnostics:
error: cannot drop
   ┌─ tests/ability-checker/assign.move:17:9
   │
17 │         *s = S { f: 42, g: T { h: 42 } };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: write_ref: cannot drop
   ┌─ tests/ability-checker/assign.move:17:9
   │
17 │         *s = S { f: 42, g: T { h: 42 } };
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
